Implement generic error handler and cleanup action
Signed-off-by: Edward O'Callaghan <eocallaghan@alterapraxis.com>

--- a/haskflash.cabal
+++ b/haskflash.cabal
@@ -28,7 +28,8 @@ executable haskflash
   main-is:             Main.hs
   other-modules:       Cmd,
                        FlashCmd,
-                       Ftdi
+                       Ftdi,
+                       Misc
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
