--- a/haskflash.cabal
+++ b/haskflash.cabal
@@ -36,7 +36,7 @@ executable haskflash
   
   build-depends:       base >=4.7 && <4.8,
                        bindings-libftdi >=0.1 && <0.2,
-                       bytestring >=0.10 && <0.11,
+                       bytestring >=0.10 && <0.11, split,
                        optparse-applicative >=0.11 && <0.12
   
   hs-source-dirs:      src
